@@ -1,0 +1,1 @@
+ALTER TABLE `raid_details` ADD `motd` varchar(1024);
